Added in compose tweet and actionbar styling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="intent_host">cprest</string>
     <string name="at">\@</string>
     <string name="dot">•</string>
+    <string name="compose_tweet_hint">What\'s happening?</string>
+    <string name="btn_compose_text">Tweet</string>
 
 </resources>
